--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
         <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
         <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-        <meta name="description" content="His name is Ginkgo, and he is kabosumama's family." />
-        <meta property="og:description" content="His name is Ginkgo, and he is kabosumama's family."/>
-        <meta name="twitter:description" content="His name is Ginkgo, and he is kabosumama's family."/>
-        <meta property="og:title" content="$GINKGO" />
-        <meta name="twitter:title" content="$GINKGO" />
+        <meta name="description" content="His name is An-chan, and he is kabosumama's family." />
+        <meta property="og:description" content="His name is An-chan, and he is kabosumama's family."/>
+        <meta name="twitter:description" content="His name is An-chan, and he is kabosumama's family."/>
+        <meta property="og:title" content="$AN-CHAN" />
+        <meta name="twitter:title" content="$AN-CHAN" />
         <link rel="canonical"  href="index.html" />
         <link rel="shortlink" href="index.html" />
         <meta property="og:url" content="index.html" />
         <meta  property="twitter:url" content="index.html" />
-        <meta property="twitter:domain" content="Ginkgoerc.com/" />
+        <meta property="twitter:domain" content="An-chanerc.com/" />
         <meta property="og:type"  content="website" />
         <meta property="og:image" content="preview.png" />
         <meta  name="twitter:image" content="preview.png" />
